styles.css
/* ... */
.solve-button {
    padding: 12px;
    background-color: #4a4a4a;
    color: white;
}

.solve-button:disabled {
    background-color: #ccc;
    cursor: not-allowed;
}

.solve-button:disabled:hover {
    background-color: #ccc;
    cursor: not-allowed;
}

.solve-button:disabled:active {
    background-color: #ccc;
    cursor: not-allowed;
}

.solve-button:hover {
    background-color: #636363;
}

.solve-button:active {
    background-color: #888888;
    transition: none;
}

.header-button {
    padding: 12px;
    background-color: transparent;
    color: white;
}

.header-button:hover {
    background-color: #636363;
}

.header-button:active {
    background-color: #888888;
    transition: none;
}

.home-button {
    background-color: transparent;
    color: white;
    font-size: 1.5em;
}

.home-button:hover {
    text-decoration: underline;
}

.nav-button {
    padding: 12px;
    background-color: transparent;
    color: white;
}

.nav-button:hover {
    background-color: #636363;
}

.nav-button:active {
    background-color: #888888;
    transition: none;
}

.wide-output {
    overflow-x: auto;
}

.contents {
    margin-top: 20px;
    margin: auto;
    max-width: 60em;
    padding: 15px;
    background-color: #ededed;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
    color: #333;
    display: block;
    text-align: left;
}

.latex-string {
    line-height: 2.5;
    text-align: center;
}

.robdd-solution-line {
    text-align: left;
    display: flex;
    transition: 0.3s;
    min-width: max-content;
}

.line-number {
    font-size: math;
    line-height: initial;
    text-align: right;
    margin-right: 15px;
    width: 1cm;
    color: gray;
}

.tabulation-hint {
    background-color: black;
    width: 1px;
    margin: -8px 0;
    margin-right: 1cm;
    color: gray;
}

.mention-button {
    width: auto;
    background: transparent;
    margin: auto 10px;
    color: gray;
    transition: 0.3s;
    cursor: context-menu;
}

.mention-button:hover {
    color: black;
}

.warning {
    background-color: rgb(255, 230, 230);
    border: red;
    border-width: 1px;
    border-style: solid;
    border-radius: 8px;
    padding: 5px;
    text-align: center;
    margin-top: 0px;
}

footer {
    position: sticky;
    bottom: 0;
    background-color: #2c2c2c;
    color: #aaa;
    text-align: center;
    padding: 5px 0;
    margin-top: auto;
    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
}

footer p {
    margin: 0;
    font-size: 0.9em;
}

.tg {
    border-collapse: collapse;
    border-spacing: 0;
    display: block;
    overflow-x: auto;
}

.tg td {
    border-color: black;
    border-style: solid;
    border-width: 1px;
    font-family: Arial, sans-serif;
    font-size: 14px;
    overflow: hidden;
    padding: 10px 5px;
    word-break: normal;
}

.tg th {
    border-color: black;
    border-style: solid;
    border-width: 1px;
    font-family: Arial, sans-serif;
    font-size: 14px;
    font-weight: normal;
    overflow: hidden;
    padding: 10px 5px;
    word-break: normal;
}

.tg .tg-0pky {
    border-color: inherit;
    text-align: left;
    vertical-align: center;
}

.tg .tg-1pky {
    border-color: inherit;
    text-align: center;
    vertical-align: center;
}

.tg .tg-0bld {
    border-color: inherit;
    text-align: left;
    vertical-align: center;
    font-weight: bold;
}

.tg .tg-1bld {
    border-color: inherit;
    text-align: center;
    vertical-align: center;
    font-weight: bold;
}

.code-cell {
    background-color: lightgray;
    padding: 0px 5px;
    border-radius: 3px;
    font-family: monospace;
}

[type="checkbox"]
{
    vertical-align:middle;
}

.table-settings {
    margin-bottom: 15px;
}

li {
    margin-top: 3px;
    margin-bottom: 3px;
}

ul {
    margin-top: 3px;
}

.footer-link {
    background-color: transparent;
    margin: 0px 10px;
    padding: 0px;
    color: #aaa;
}

.footer-link:hover {
    color: white;
    transition: color 0.3s;
}

.output {
    display: none;
    margin-top: 20px;
    margin: auto;
    max-width: 60em;
    font-size: 1em;
    color: #333;
    text-align: left;
}

.nav-panel {
    margin: auto;
    max-width: 60em;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    justify-content: space-between;
    gap: 10px;
    align-items: center;
    transition: all 0.3s;
}

.footer-link-text {
    display: none;
}

.footer-container {
    padding: 0px 20px;
    max-width: 60em;
    display: flex;
    justify-content: center;
    margin: auto;
}

.spin-tasks {
    margin-top: 20px;
    margin: auto;
    max-width: 60em;
    font-size: 1em;
    color: #333;
    text-align: left;
    display: none;
}

@media (min-width: 601px) 
{
    .footer-link-text {
        display: inline;
    }

    .footer-container {
        justify-content: space-between;
    }

    .nav-panel {
        flex-direction: row;
    }

    .output {
        padding: 15px;
        background-color: #ededed;
        border: 1px solid #ccc;
        border-radius: 5px;
    }

    .spin-tasks {
        padding: 15px;
        background-color: #ededed;
        border: 1px solid #ccc;
        border-radius: 5px;
    }
}

.inactive {
    color: rgba(255, 255, 255, 0.3);
    cursor: not-allowed;
}

.inactive:hover {
    background-color: transparent;
}

svg {
    display: block;
}

svg.logo {
    display: inline;
    vertical-align: -.125em;
}

 /* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 40px;
    height: 24px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}
/* ... */

